--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -1,5 +1,5 @@
 body {
     font-family: 'Karla', sans-serif;
     font-family: 'Source Sans Pro', sans-serif;
-    background-color: aliceblue;
+    background-color: #ffebcc;
 }
