--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -1,5 +1,15 @@
 body {
-    font-family: 'Karla', sans-serif;
-    font-family: 'Source Sans Pro', sans-serif;
-    background-color: #ffebcc;
+  font-family: "Karla", sans-serif;
+  font-family: "Source Sans Pro", sans-serif;
+  background-color: #f5f5f5;
+  background-image: url("/img/a-sandwich-2497622__340.jpg");
+  background-size: cover;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+
+.jumbotron {
+  min-height: 200px;
 }
