--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,16 +1,15 @@
 <div class="jumbotron bg-cover" <div class="container">
 
     <h1 class="text-center mb-5 display-1">Eat-Da-Burger</h1>
-    {{!-- <img src="/img/a-sandwich-2497622__340.jpg" alt=""> --}}
 </div>
 </div>
 
 <form class="create-form" action="/" method="POST">
 
-    <h1 class="text-center display-5 bg-light"><strong> Enter a burger you want to eat. Click the "Submit" button.</strong></h1>
+    <h1 class="text-center display-5" id="enterBurger"><strong> Enter a burger you want to eat.</strong></h1>
 
-    <textarea class="mx-auto d-block" type="text" name="burgers" id="createBurger" cols="50" rows="3"></textarea>
-    <button class="mx-auto d-block mb-5" type="submit">Submit</button>
+    <textarea class="mx-auto d-block" type="text" name="burgers" id="createBurger" cols="70" rows="3"></textarea>
+    <button id="submitBtn" class="mx-auto d-block mb-5" type="submit">Submit</button>
 </form>
 
 <div class="container">
@@ -26,7 +25,7 @@
                             {{#each burgers}}
                             {{#unless devoured}}
                             <span><strong> {{this.id}} - {{this.burger_name}}</strong></span> <br>
-                            <button class="btn btn-light btn-sm" id="devourBurger" type="button" data-id="{{this.id}}"
+                            <button class="btn btn-sm" id="devourBurger" type="button" data-id="{{this.id}}"
                                 data-devouredChange="{{devour}}">Devour
                                 it!</button>
                             <hr>
@@ -53,13 +52,12 @@
                         <div class="list-group list-group-flush">
                             <ul>
 
-                                {{!-- <a href="#" class="list-group-item list-group-item-action"></a> --}}
                                 {{#each burgers}}
                                 {{#if devoured}}
 
                                 <span><strong> {{this.id}} - {{this.burger_name}}</strong></span><br>
 
-                                <button class="btn btn-secondary btn-sm" id="deleteBurger" type="button"
+                                <button class="btn btn-sm" id="deleteBurger" type="button"
                                     data-id="{{this.id}}" data-devouredChange="{{devour}}">Delete</button>
                                 <hr>
                                 {{/if}}
