--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -17,7 +17,7 @@
 
         <div class="col-lg-6 mb-4">
             <div class="card">
-                <div class="card-title h2">Burgers I would like to eat</div>
+                <div class="text-center card-title h2">Burgers I would like to eat</div>
                 <div class="card-body">
                     <div class="list-group list-group-flush">
 
@@ -46,7 +46,7 @@
 
         <div class="col-lg-6 mb-4">
             <div class="card">
-                <div class="card-title h2"> Devoured Burgers</div>
+                <div class="text-center card-title h2"> Devoured Burgers</div>
                 <div class="card-body">
                     <div>
                         <div class="list-group list-group-flush">
@@ -57,7 +57,7 @@
 
                                 <span><strong> {{this.id}} - {{this.burger_name}}</strong></span><br>
 
-                                <button class="btn btn-sm" id="deleteBurger" type="button"
+                                <button class="btn btn-sm" id="deleteBtn" type="button"
                                     data-id="{{this.id}}" data-devouredChange="{{devour}}">Delete</button>
                                 <hr>
                                 {{/if}}
