--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,13 +4,13 @@
 </div>
 </div>
 
-<form class="create-form" action="/" method="POST">
+<div class="form-group col-md-6 mx-auto create-form" action="/" method="POST">
 
     <h1 class="text-center display-5" id="enterBurger"><strong> Enter a burger you want to eat.</strong></h1>
 
-    <textarea class="mx-auto d-block" type="text" name="burgers" id="createBurger" cols="70" rows="3"></textarea>
+    <textarea class="form-control mx-auto d-block" type="text" name="burgers" id="createBurger" cols="30" rows="3"></textarea>
     <button id="submitBtn" class="mx-auto d-block mb-5" type="submit">Submit</button>
-</form>
+</div>
 
 <div class="container">
     <div class="row">
