--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,13 +4,20 @@
 </div>
 </div>
 
-<div class="form-group col-md-6 mx-auto create-form" action="/" method="POST">
+<form class="create-form" action="/" method="POST">
 
-    <h1 class="text-center display-5" id="enterBurger"><strong> Enter a burger you want to eat.</strong></h1>
+    <div class="form-group col-md-6 mx-auto create-form">
 
-    <textarea class="form-control mx-auto d-block" type="text" name="burgers" id="createBurger" cols="30" rows="3"></textarea>
-    <button id="submitBtn" class="mx-auto d-block mb-5" type="submit">Submit</button>
-</div>
+        <h1 class="text-center display-5" id="enterBurger"><strong> Enter a burger you want to eat.</strong></h1>
+
+        <textarea class="form-control mx-auto d-block" type="text" name="burgers" id="createBurger" cols="30"
+            rows="3"></textarea>
+        <button id="submitBtn" class="mx-auto d-block mb-5" type="submit">Submit</button>
+    </div>
+</form>
+
+
+
 
 <div class="container">
     <div class="row">
@@ -57,8 +64,8 @@
 
                                 <span><strong> {{this.id}} - {{this.burger_name}}</strong></span><br>
 
-                                <button class="btn btn-sm" id="deleteBtn" type="button"
-                                    data-id="{{this.id}}" data-devouredChange="{{devour}}">Delete</button>
+                                <button class="btn btn-sm" id="deleteBtn" type="button" data-id="{{this.id}}"
+                                    data-devouredChange="{{devour}}">Delete</button>
                                 <hr>
                                 {{/if}}
                                 {{/each}}
